fix repo link address

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="gameover-mask">Game Over</div>
     <footer>
         Developed by Stillwtm.<br>
-        You can ⭐ <a href="https://github.com/Stillwtm">the Repo</a> if you're interested.
+        You can ⭐ <a href="https://github.com/Stillwtm/html_2048">the Repo</a> if you're interested.
     </footer>
 </body>
 
