--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-    <title>2048</title>
+    <title>2048 Online Game</title>
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="main.js"></script>
 </head>
